Use List.of for args