@@ -20,8 +20,6 @@ import com.palantir.logsafe.Arg;
 import com.palantir.logsafe.SafeArg;
 import com.palantir.logsafe.SafeLoggable;
 import com.palantir.logsafe.UnsafeArg;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 /** An exception thrown by an RPC client to indicate remote/server-side failure from a non-remoting server. */
@@ -54,9 +52,6 @@ public final class UnknownRemoteException extends RuntimeException implements Sa
 
     @Override
     public List<Arg<?>> getArgs() {
-        List<Arg<?>> args = new ArrayList<>(2);
-        args.add(SafeArg.of("status", getStatus()));
-        args.add(UnsafeArg.of("body", getBody()));
-        return Collections.unmodifiableList(args);
+        return List.of(SafeArg.of("status", getStatus()), UnsafeArg.of("body", getBody()));
     }
 }
